# Substance-3D-Designer-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  compatibility.md  development.md  installation.md  protocol.md  security-model.md
docs/schemas/: bridge-request.schema.json  bridge-response.schema.json
examples/: mcp-config.json  tool-examples.md
scripts/: __init__.py  build_plugin.py  install_plugin.py  run_sd16_e2e.ps1  uninstall_plugin.py  verify_release.py
sd_plugin/substance_designer_mcp_plugin/: __init__.py  config.py  errors.py  logging_config.py  plugin.py  pluginInfo.json
sd_plugin/substance_designer_mcp_plugin/bridge/: __init__.py  framing.py  main_thread_dispatcher.py  protocol.py  server.py  session.py
sd_plugin/substance_designer_mcp_plugin/commands/: __init__.py  authoring.py  executor.py  registry.py  validators.py
sd_plugin/substance_designer_mcp_plugin/compatibility/: __init__.py  capabilities.py  detector.py  sd16.py
sd_plugin/substance_designer_mcp_plugin/serialization/: __init__.py  references.py
sd_plugin/substance_designer_mcp_plugin/services/: __init__.py  application_service.py  authoring_service.py  common.py  connection_service.py  container.py  delivery_service.py  graph_service.py  library_service.py  node_service.py  package_service.py  parameter_service.py  patch_service.py  resource_resolver.py  selection_service.py
src/substance_designer_mcp/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  server.py
src/substance_designer_mcp/bridge/: __init__.py  client.py  discovery.py  framing.py  protocol.py
src/substance_designer_mcp/models/: __init__.py  references.py  (+2 more)
tests/: conftest.py
tests/contract/: test_architecture_boundaries.py  test_json_schemas.py  test_protocol_mirror.py  test_release_version.py  test_sd16_manual_harness.py  test_version_claims.py
tests/fakes/: __init__.py  sd_adapter.py  sd_api.py  sd_preset.py
tests/integration/: test_bridge_roundtrip.py  test_mcp_bridge.py
tests/manual/: sd16_e2e_client.py  sd16_e2e_controller.py  sd16_e2e_host.py  sd16_e2e_support.py  sd16_plugin_manager_smoke.py  sd16_plugin_probe_controller.py  sd16_startup_smoke.py
tests/unit/: test_command_executor.py  test_compatibility.py  test_config.py  test_delivery_service.py  test_dispatcher.py  test_errors_and_references.py  test_framing.py  test_logging_and_cli.py  test_patch_service.py  test_plugin_config.py  test_plugin_lifecycle.py  test_protocol.py  test_registry.py  test_release_scripts.py  test_sd16_e2e_client.py  test_sd16_e2e_host_controller.py  test_sd16_e2e_support.py  test_sd16_plugin_probe_controller.py  test_services.py  test_session_discovery.py  test_tools.py  test_validators.py  test_verify_release.py
(+10 files in other folders)
